Add spam filter

--- a/mailman-telegram-webhook.cfg
+++ b/mailman-telegram-webhook.cfg
@@ -18,6 +18,10 @@ token = mytoken
 # If global chat id is not defined, no message is sent when the archiver is enabled for a list without specific chat id.
 # chat_id = 
 
+# If filter_spam is set to true, message with SPM in subject will not trigger bot
+# filter_spam = false
+filter_spam = false
+
 # Additionally, you can define specifics chat id for each list.
 #
 # [list.list_name]
